--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=ossW9fwJ&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nEwLTKw3'>ServiceNow Careers - Staff Front End Software Engineer (UI)</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-07-25</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/thinkhr/1b4f1e26-4f24-4015-9b18-08b0d55c64c4'>ThinkHR - Senior Manager, Front-End Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -74,7 +78,7 @@
 <p><span class="badge badge-light">Rockville, MD</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/lucidmotors/7d9ebb54-cc4d-432f-9158-1c1ac88cd183'>Lucid Motors - Front-end Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lucidmotors/7d9ebb54-cc4d-432f-9158-1c1ac88cd183'>Lucid Motors - Front-end Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -86,7 +90,7 @@
 <p><span class="badge badge-light">Barcelona,</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://finanzchef24.join.com/jobs/265669-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
+<h5><a href='https://finanzchef24.join.com/jobs/265669-senior-frontend-engineer-m-w-d'>Job @ Finanzchef24 (Munich): Senior Frontend Engin... | JOIN</a></h5> 
 <p><span class="badge badge-light">Munich Munich</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -134,11 +138,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1787447'>Job Application for Front-End Development Intern at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Ghent, BE</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1790265'>Job Application for Senior Software Developer, Front-End (Golf) at Lightspeed ENG</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lightspeedpos/jobs/1790265'>Job Application for Senior Software Developer, Front-End (Golf) at Lightspeed ENG</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -182,7 +186,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692158604-frontend-engineer-coches-motos-net'>Adevinta Frontend Engineer Coches&amp; Motos.net | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Adevinta/743999692158604-frontend-engineer-coches-motos-net'>Adevinta Frontend Engineer Coches&amp; Motos.net | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -200,7 +204,7 @@
 <p><span class="badge badge-light">Cape Town Cape Town South Africa</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://activeprospect.applytojob.com/apply/9KN7fEO3Ur/Front-End-Software-Engineer-Remote-Ok'>Front End Software Engineer (Remote ok) - ActiveProspect, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -230,7 +234,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<h5><a href='http://graze.applytojob.com/apply/PxxT18r06g/Front-End-Developer'>Front End Developer - graze.com - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://graze.applytojob.com/apply/PxxT18r06g/Front-End-Developer'>Front End Developer - graze.com - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -261,7 +265,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oEtBafwC'>Castle Group Careers - Front Desk Administrative Attendant</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlegroup/job/oEtBafwC'>Castle Group Careers - Front Desk Administrative Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -269,7 +273,7 @@ prioritizes creativity and user experience alongside great code and curiosity.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/castlegroup/job/oNGzafwW'>Castle Group Careers - Front Desk Attendant</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oNGzafwW'>Castle Group Careers - Front Desk Attendant</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -370,7 +374,7 @@ Banking Technology|CCBD Technology is now hiring a Front End Developer?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://kapten.workable.com/j/3A715F2AA3'>Kapten - Jobs: Senior Front-end Developer (M/F) #React.js - Barcelona (relocation accepted) - Apply online</a></h5> 
+<h5><a href='https://kapten.workable.com/j/3A715F2AA3'>Kapten - Jobs: Senior Front-end Developer (M/F) #React.js - Barcelona (relocation accepted) - Apply online</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona Barcelona Barcelona, Catalonia, Spain Barcelona</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -435,7 +439,7 @@ growth through Acorns' web frameworks, and other platform-based tools. Provide
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Frontend Developer at Drover.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cdl-2.workable.com/j/77246724CD'>CDL - Jobs: Junior Front End Developer - Apply online</a></h5> 
+<h5><a href='https://cdl-2.workable.com/j/77246724CD'>CDL - Jobs: Junior Front End Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">England, United Kingdom</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -459,10 +463,6 @@ platform around AI, Machine Learning and Big Data, meaning that our platform is
 <p>1 day ago ... Front-End Developer. Moscow, Russian Federation. Apply. Description. 
 Responsibilities: Implement a next-generation user interface using latest 
 technologies?...</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Playtech/743999692087846-senior-front-end-developer'>Playtech Senior Front End Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Kyiv, Ukraine</span></p>
-<p>Posted on: 2019-07-22</p>
 <hr/>
 
 
